[gd_scene load_steps=6 format=3 uid="uid://nwy30g8x7hqn"]

[ext_resource type="Theme" uid="uid://63lmbp6v151r" path="res://Sprites/Config/theme.tres" id="1_c6847"]
[ext_resource type="Texture2D" uid="uid://b244g0uibf8dn" path="res://Sprites/General/banner.png" id="2_ejx3v"]
[ext_resource type="Script" uid="uid://boq2m72nwffrk" path="res://Scripts/Vistas/lucha.gd" id="2_ndc0s"]
[ext_resource type="Texture2D" uid="uid://bmxkvimhor7gv" path="res://Sprites/General/default_card.png" id="3_ndc0s"]
[ext_resource type="PackedScene" uid="uid://qwegldmplxjb" path="res://Scenes/Componentes/lugar.tscn" id="4_kvmca"]

[node name="Lucha" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c6847")
script = ExtResource("2_ndc0s")
metadata/_edit_lock_ = true

[node name="Header" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -57.0
offset_right = 621.0
offset_bottom = 188.333
texture = ExtResource("2_ejx3v")
expand_mode = 5
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="Header"]
layout_mode = 0
offset_top = 168.0
offset_right = 621.0
offset_bottom = 246.0
metadata/_edit_lock_ = true

[node name="BtnMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 12.0
offset_right = 76.0
offset_bottom = 68.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("1_c6847")
text = "<"
metadata/_edit_lock_ = true

[node name="Titulo" type="Label" parent="."]
layout_mode = 0
offset_top = 38.0
offset_right = 619.0
offset_bottom = 109.0
theme = ExtResource("1_c6847")
theme_override_font_sizes/font_size = 50
text = "Fight"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Monstruo1" type="Panel" parent="."]
self_modulate = Color(0.716296, 0.716296, 0.716296, 1)
layout_mode = 0
offset_left = 18.0
offset_top = 135.0
offset_right = 292.0
offset_bottom = 560.0
metadata/_edit_lock_ = true

[node name="Imagen" type="TextureRect" parent="Monstruo1"]
layout_mode = 0
offset_left = 56.0
offset_top = 14.0
offset_right = 216.0
offset_bottom = 254.0
mouse_filter = 2
texture = ExtResource("3_ndc0s")
expand_mode = 5
metadata/_edit_lock_ = true

[node name="Nombre" type="Label" parent="Monstruo1"]
layout_mode = 0
offset_left = 3.0
offset_top = 249.0
offset_right = 273.0
offset_bottom = 371.0
theme_override_font_sizes/font_size = 25
text = "Nombre"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="Nivel" type="Label" parent="Monstruo1"]
self_modulate = Color(0.549822, 0.400573, 0.263642, 1)
layout_mode = 0
offset_left = 36.0
offset_top = 368.0
offset_right = 237.0
offset_bottom = 425.0
text = "LVL: 1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="Monstruo2" type="Panel" parent="."]
self_modulate = Color(0.716296, 0.716296, 0.716296, 1)
layout_mode = 0
offset_left = 328.0
offset_top = 136.0
offset_right = 602.0
offset_bottom = 561.0
metadata/_edit_lock_ = true

[node name="Imagen" type="TextureRect" parent="Monstruo2"]
layout_mode = 0
offset_left = 56.0
offset_top = 14.0
offset_right = 216.0
offset_bottom = 254.0
mouse_filter = 2
texture = ExtResource("3_ndc0s")
expand_mode = 5
metadata/_edit_lock_ = true

[node name="Nombre" type="Label" parent="Monstruo2"]
layout_mode = 0
offset_left = 3.0
offset_top = 249.0
offset_right = 273.0
offset_bottom = 371.0
theme_override_font_sizes/font_size = 25
text = "Nombre"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="Nivel" type="Label" parent="Monstruo2"]
self_modulate = Color(0.549822, 0.400573, 0.263642, 1)
layout_mode = 0
offset_left = 36.0
offset_top = 368.0
offset_right = 237.0
offset_bottom = 425.0
text = "LVL: 1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="BtnLeft" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0.00392157)
layout_mode = 0
offset_left = 329.0
offset_top = 140.0
offset_right = 463.0
offset_bottom = 555.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("1_c6847")
metadata/_edit_lock_ = true

[node name="BtnRight" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0.00392157)
layout_mode = 0
offset_left = 468.0
offset_top = 141.0
offset_right = 602.0
offset_bottom = 556.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("1_c6847")
metadata/_edit_lock_ = true

[node name="Lugar" parent="." instance=ExtResource("4_kvmca")]
layout_mode = 0
offset_left = 52.0
offset_top = 530.0
offset_right = 606.0
offset_bottom = 773.0

[node name="BtnFight" type="Button" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 1017.0
offset_right = 495.0
offset_bottom = 1085.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("1_c6847")
text = "Fight"
metadata/_edit_lock_ = true

[connection signal="pressed" from="BtnMenu" to="." method="_on_btn_menu_pressed"]
[connection signal="pressed" from="BtnLeft" to="." method="_on_btn_left_pressed"]
[connection signal="pressed" from="BtnRight" to="." method="_on_btn_right_pressed"]
[connection signal="pressed" from="BtnFight" to="." method="_on_btn_fight_pressed"]
